--- a/Config.properties
+++ b/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = <your_database_username>
-app42.paas.db.port = <your_service_port>
-app42.paas.db.password = <your_database_password>
-app42.paas.db.ip = <your_service_ip>
-app42.paas.db.name = <your_database_name>
+app42.paas.db.username = 'demouser'
+app42.paas.db.port = '3306'
+app42.paas.db.password = 'p4ssW0rd1234'
+app42.paas.db.ip = '127.0.0.1'
+app42.paas.db.name = 'demodb'
